[#noissue] Simplify StatPoint creation